crates/swc/tests/tsc-references/wrappedAndRecursiveConstraints2_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C = function C(x) {
    "use strict";
    swcHelpers.classCallCheck(this, C);
};
var c = new C(1);
var c = new C(new C("")); // error
